--- a/navigation-Aule.html
+++ b/navigation-Aule.html
@@ -43,7 +43,7 @@
 			<div class="filter">
 				<div class="segmented-control">
 				    <a class="control-item active">Aule</a>
-				    <a class="control-item">Follower</a>
+				    <a href="navigation-Followers.html" class="control-item">Follower</a>
 				    <a class="control-item">Professori</a>
 					<a class="control-item">Uffici</a>
 		  		</div>
@@ -63,14 +63,12 @@
 								<ul class="table-view">
   									<li class="table-view-cell">
 			    						<a>
-			      							<span class="media-object pull-left icon icon-trash"></span>
 									    	<span class="media-body">Aula 0.1</span>
 											<span class="media-object pull-right icon icon-info"></span>
 									    </a>
 						  			</li>
 									<li class="table-view-cell">
 									    <a>
-									    	<span class="media-object pull-left icon icon-gear"></span>
 									      	<span class="media-body">Aula 0.2</span>
 											<span class="media-object pull-right icon icon-info"></span>
 
@@ -78,7 +76,6 @@
 									</li>
 								  	<li class="table-view-cell">
 								    	<a>
-								      		<span class="media-object pull-left icon icon-pages"></span>
 								      		<span class="media-body">Aula 0.3</span>
 											<span class="media-object pull-right icon icon-info"></span>
 								    	</a>
