--- a/navigation-Professori.html
+++ b/navigation-Professori.html
@@ -42,9 +42,9 @@
 			<!-- Accordion -->
 			<div class="filter">
 				<div class="segmented-control">
-				    <a class="control-item active">Aule</a>
+				    <a class="control-item">Aule</a>
 				    <a class="control-item">Follower</a>
-				    <a class="control-item">Professori</a>
+				    <a class="control-item active">Professori</a>
 					<a class="control-item">Uffici</a>
 		  		</div>
 			</div>
