--- a/FollowersCoppito1.html
+++ b/FollowersCoppito1.html
@@ -5,9 +5,7 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
-		      	<div class="media-body">
-			        Matteo Polsinelli
-		      	</div>
+		      	<div class="media-body">Matteo Polsinelli</div>
 				<div>
 			        <span class="labelCard">Status: </span>
 					<span class="textCard">A lezione</span>
@@ -22,8 +20,14 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
-		      	<div class="media-body">
-		        	Davide Giancola
+				<div class="media-body">Davide Giancola</div>
+				<div>
+			        <span class="labelCard">Status: </span>
+					<span class="textCard">A lezione</span>
+		      	</div>
+				<div>
+			        <span class="labelCard">Aula: </span>
+					<span class="textCard">0.1</span>
 		      	</div>
     		</a>
   		</li>
@@ -35,8 +39,14 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
-		      	<div class="media-body">
-			        Matteo Polsinelli
+				<div class="media-body">Matteo Polsinelli</div>
+				<div>
+			        <span class="labelCard">Status: </span>
+					<span class="textCard">A lezione</span>
+		      	</div>
+				<div>
+			        <span class="labelCard">Aula: </span>
+					<span class="textCard">0.1</span>
 		      	</div>
     		</a>
   		</li>
@@ -44,9 +54,15 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
-		      	<div class="media-body">
-		        	Davide Giancola
-		      	</div>
+				<div class="media-body">Davide Giancola</div>
+  			  	<div>
+  				  	<span class="labelCard">Status: </span>
+  				  	<span class="textCard">A lezione</span>
+  			  	</div>
+  			  	<div>
+  				  	<span class="labelCard">Aula: </span>
+  				  	<span class="textCard">0.1</span>
+  			  	</div>
     		</a>
   		</li>
 	</ul>
@@ -57,8 +73,14 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
-		      	<div class="media-body">
-			        Matteo Polsinelli
+				<div class="media-body">Matteo Polsinelli</div>
+				<div>
+			        <span class="labelCard">Status: </span>
+					<span class="textCard">A lezione</span>
+		      	</div>
+				<div>
+			        <span class="labelCard">Aula: </span>
+					<span class="textCard">0.1</span>
 		      	</div>
     		</a>
   		</li>
@@ -66,8 +88,14 @@
   		<li class="table-view-cell media">
     		<a>
 	      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
-		      	<div class="media-body">
-		        	Davide Giancola
+				<div class="media-body">Davide Giancola</div>
+				<div>
+			        <span class="labelCard">Status: </span>
+					<span class="textCard">A lezione</span>
+		      	</div>
+				<div>
+			        <span class="labelCard">Aula: </span>
+					<span class="textCard">0.1</span>
 		      	</div>
     		</a>
   		</li>
