--- a/navigation.html
+++ b/navigation.html
@@ -13,12 +13,12 @@
 
     	<!-- Include the compiled Ratchet CSS -->
     	<link href="libs/ratchet-v2.0.2/css/ratchet.css" rel="stylesheet">
-		
+
 
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.structure.min.css" rel="stylesheet">
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 
-<link href="css/accordion.css" rel="stylesheet">
+		<link href="css/accordion.css" rel="stylesheet">
     	<!-- Include the compiled Ratchet JS -->
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
 		<script src="libs/jquery-1.12.0.min.js"></script>
@@ -39,12 +39,22 @@
   			<h1 class="title">Title</h1>
 		</header>
 
+
 		<div class="content">
+			<div id="myModalexample" class="modal">
+				<header class="bar bar-nav">
+					<a class="icon icon-close pull-right" href="#myModalexample"></a>
+					<h1 class="title">Modal</h1>
+				</header>
+				<div class="content">
+					<p class="content-padded">The contents of my modal go here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+				</div>
+			</div>
 			<!-- Accordion -->
 			<div class="filter">
 				<div class="segmented-control">
 				    <a id="aulebar" class="control-item active">Aule</a>
-				    <a id="followerbar"class="control-item">Follower</a>
+				    <a id="followerbar" class="control-item">Follower</a>
 				    <a class="control-item">Professori</a>
 					<a class="control-item">Uffici</a>
 		  		</div>
