--- a/schedaPolo.html
+++ b/schedaPolo.html
@@ -36,23 +36,13 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h1 class="title">Effettua il login</h1>
+  			<h1 class="title">Polo Coppito</h1>
 		</header>
 
-
 		<div class="content">
-
-			<img class="media-object univaqImage" src="img/logoUni.png">
-			<h3 class="loginText">Università degli studi dell'Aquila</h3>
-
-			<form class="loginForm">
-  				<input type="text" placeholder="Full name">
-  				<input type="password" placeholder="Password">
-				<a href="universeCreation.html" data-transition="slide-in">
-					<button class="btn btn-positive btn-block">Login</button>
-				</a>
-			</form>
+			<img class="imagePhoto" src="img/poloCoppito.jpg">
 		</div>
+
   	</body>
 	<script src="js/navigation.js"></script>
 
