--- a/AuleCoppito1.html
+++ b/AuleCoppito1.html
@@ -3,16 +3,17 @@
 <div id="P0" class="card">
 	<ul class="table-view">
 		<li class="table-view-cell">
-			<a>
-		    	<span class="media-body">Aula 0.1</span>
-		    	<span class="media-body info">Ahk</span>
-		    	<span class="statusaula circle icon"></span>
-
-				<span class="media-object pull-right icon icon-info">
-					<a id="openModal" class="btn">Open modal</a>
-				</span>
-	    	</a>
+			<a class="navigate-right" id="frecciaAula">
+				<div class="media-body">
+					<span class="media-body">Aula 0.1</span>
+  					<span class="statusAula">
+  			    		<span class="circle icon"></span>
+  						<span class="media-body">Libera tra 59'</span>
+  					</span>
+				</div>
+			</a>
 		</li>
+
 		<li class="table-view-cell">
 		    <a>
 		      	<span class="media-body">Aula 0.2</span>
