--- a/AuleCoppito1.html
+++ b/AuleCoppito1.html
@@ -2,12 +2,14 @@
 
 <div id="P0" class="card">
 	<ul class="table-view">
+
+
 		<li class="table-view-cell">
-			<a class="navigate-right" id="frecciaAula">
+			<a class="navigate-right frecciaAula">
 				<div class="media-body">
 					<span class="media-body">Aula 0.1</span>
   					<span class="statusAula">
-  			    		<span class="circle icon"></span>
+  			    		<span class="aula_occupata icon"></span>
   						<span class="media-body">Libera tra 59'</span>
   					</span>
 				</div>
@@ -15,64 +17,94 @@
 		</li>
 
 		<li class="table-view-cell">
-		    <a>
+		    <a  class="navigate-right frecciaAula">
 		      	<span class="media-body">Aula 0.2</span>
-				<span class="media-object pull-right icon icon-info"></span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
+
 		    </a>
 		</li>
-	  	<li class="table-view-cell">
-	    	<a>
-	      		<span class="media-body">Aula 0.3</span>
-				<span class="media-object pull-right icon icon-info"></span>
-	    	</a>
-	  	</li>
+		<li class="table-view-cell">
+  		    <a  class="navigate-right frecciaAula">
+  		      	<span class="media-body">Aula 0.3</span>
+  				<span class="statusAula">
+  					<span class="aula_libera icon"></span>
+  					<span class="media-body">Libera</span>
+  				</span>
+
+  		    </a>
+  		</li>
 	</ul>
 </div>
 
 <div id="P1" class="card">
 	<ul class="table-view">
-			<li class="table-view-cell">
-			<a>
-		    	<span class="media-body">Aula 1.1</span>
-				<span class="media-object pull-right icon icon-info"></span>
-		    </a>
-			</li>
 		<li class="table-view-cell">
-		    <a>
-		      	<span class="media-body">Aula 1.2</span>
-				<span class="media-object pull-right icon icon-info"></span>
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 1.1</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
 
-		    </a>
+			</a>
 		</li>
-	  	<li class="table-view-cell">
-	    	<a>
-	      		<span class="media-body">Aula 1.3</span>
-				<span class="media-object pull-right icon icon-info"></span>
-	    	</a>
-	  	</li>
+		<li class="table-view-cell">
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 1.2</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
+
+			</a>
+		</li>
+		<li class="table-view-cell">
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 1.3</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
+
+			</a>
+		</li>
 	</ul>
 </div>
 
 <div id="P2" class="card">
 	<ul class="table-view">
-			<li class="table-view-cell">
-			<a>
-		    	<span class="media-body">Aula 2.1</span>
-				<span class="media-object pull-right icon icon-info"></span>
-		    </a>
-			</li>
 		<li class="table-view-cell">
-		    <a>
-		      	<span class="media-body">Aula 2.2</span>
-				<span class="media-object pull-right icon icon-info"></span>
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 2.1</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
 
-		    </a>
+			</a>
 		</li>
-	  	<li class="table-view-cell">
-	    	<a>
-	      		<span class="media-body">Aula 2.3</span>
-				<span class="media-object pull-right icon icon-info"></span>
-	    	</a>
-	  	</li>
+		<li class="table-view-cell">
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 2.2</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
+
+			</a>
+		</li>
+		<li class="table-view-cell">
+			<a  class="navigate-right frecciaAula">
+				<span class="media-body">Aula 2.3</span>
+				<span class="statusAula">
+					<span class="aula_libera icon"></span>
+					<span class="media-body">Libera</span>
+				</span>
+
+			</a>
+		</li>
 	</ul>
 </div>
