--- a/FollowersCoppito1.html
+++ b/FollowersCoppito1.html
@@ -3,7 +3,7 @@
 <div id="P0" class="card">
 	<ul class="table-view">
   		<li class="table-view-cell media">
-    		<a>
+    		<a class="navigate-right frecciaProfilo">
 	      		<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 		      	<div class="media-body">Matteo Polsinelli</div>
 				<div>
