--- a/navigation.html
+++ b/navigation.html
@@ -40,8 +40,7 @@
 		<!-- Title bar -->
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-
-  			<h1 class="title">Title</h1>
+  			<h1 id= "titleNavigation" class="titleNavigation">Navigation</h1>
 		</header>
 		<div class="snap-drawers">
 			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
