Bug Fix Pagina Profilo

--- a/selectStatus.html
+++ b/selectStatus.html
@@ -36,7 +36,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" href="profile.html" data-transition="slide-out"></a>
+  			<a class="icon icon-left-nav pull-left" href="profile.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Seleziona Status</h1>
 		</header>
 
