--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
 					 
 					  	<ul class="table-view pulito ">
 						<li class="table-view-cell pulito">
-						    <a class="navigate-right"  href="selectStatus.html" data-transition="slide-in">
+						    <a class="navigate-right"  href="selectStatus.html" data-transition="slide">
 						      <span class="media-object pull-left icon icon-gear"></span>
 						      <div class="media-body">
 						        Stato Corrente: a lezione
@@ -80,7 +80,7 @@
 						<ul class="table-view pulito ">
 						  <li class="table-view-cell pulito">
 						
-							<a class="navigate-right"  href="selectPole.html" data-transition="slide-in">
+							<a class="navigate-right"  href="selectPole.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Polo apparteneza: Coppito
@@ -88,7 +88,7 @@
 						    </a>
 						 </li>
 						 <li class="table-view-cell pulito">
-							<a class="navigate-right"  href="selectPole.html" data-transition="slide-in">
+							<a class="navigate-right"  href="selectPole.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Corsi seguiti
@@ -117,11 +117,11 @@
 				</ul>
 			</div>
 			<nav class="bar bar-tab">
-	  			<a class="tab-item active" href="#">
+	  			<a class="tab-item" href="#">
 	    			<span class="icon icon-home"></span>
 	    			<span class="tab-label">Home</span>
 	  			</a>
-				<a class="tab-item" href="#">
+				<a class="tab-item active" href="#">
 					<span class="icon icon-person"></span>
 				    <span class="tab-label">Profile</span>
 				</a>
