nav bar bottom fixed

--- a/logInit.html
+++ b/logInit.html
@@ -44,6 +44,8 @@
 
 			<img class="media-object univaqImage" src="img/logoUni.png">
 			<h3 class="loginText">Università degli studi dell'Aquila</h3>
+			<h5 class="loginText">(Utilizza credenziali segreteria virtuale)</h5>
+
 
 			<form class="loginForm">
   				<input type="text" placeholder="Full name">
