--- a/navigation.html
+++ b/navigation.html
@@ -127,19 +127,21 @@
   			</a>
 			<a class="tab-item" href="#">
 				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profile</span>
+			    <span class="tab-label">Profilo</span>
 			</a>
 			<a class="tab-item" href="#">
-				<span class="icon icon-star-filled"></span>
-			    <span class="tab-label">Favorites</span>
+				<span class="icon icon-search"></span>
+			    <span class="tab-label">Cerca</span>
 			</a>
 			<a class="tab-item" href="#">
-			    <span class="icon icon-search"></span>
-			    <span class="tab-label">Search</span>
+				<span class="media-object">
+					<img src="img/followers.png" class="followersImage">
+				</span>
+			    <span class="tab-label">Followers</span>
 			</a>
 			<a class="tab-item" href="#">
-				<span class="icon icon-gear"></span>
-			    <span class="tab-label">Settings</span>
+				<span class="icon icon-bars"></span>
+			    <span class="tab-label">Menu</span>
 			</a>
 		</nav>
   	</body>
