--- a/gestisci_notifiche_prof_poli.html
+++ b/gestisci_notifiche_prof_poli.html
@@ -43,52 +43,21 @@
 			<div class="card">
 				<ul class="table-view">
 					<li class="table-view-cell table-view-divider">
-					    Status Notifiche
+					    Poli
 					</li>
 
 					<li class="table-view-cell">
-					    Pausa
+					    Coppito
 					    <div class="toggle">
 					    	<div class="toggle-handle"></div>
 					    </div>
 					</li>
 
 					<li class="table-view-cell">
-					    Lezione
+					    Roio
 					    <div class="toggle active">
 					      	<div class="toggle-handle"></div>
 					    </div>
-					</li>
-
-					<li class="table-view-cell">
-						Ricevimento
-					    <div class="toggle">
-					    	<div class="toggle-handle"></div>
-					    </div>
-					</li>
-				</ul>
-			</div>
-
-			<div class="card">
-				<ul class="table-view">
-					<li class="table-view-cell table-view-divider">
-					    Attiva Notifiche
-					</li>
-
-					<li class="table-view-cell">
-					    Nel mio edificio
-					    <div class="toggle">
-					    	<div class="toggle-handle"></div>
-					    </div>
-					</li>
-
-					<li class="table-view-cell">
-						<a class="navigate-right"  href="selectPole.html" data-transition="slide">
-							<span class="media-object pull-left icon icon-pages"></span>
-							<div class="media-body">
-							Altri poli
-							</div>
-						</a>
 					</li>
 				</ul>
 			</div>
