--- a/listaFollowers.html
+++ b/listaFollowers.html
@@ -14,15 +14,18 @@
     	<!-- Include the compiled Ratchet CSS -->
     	<link href="libs/ratchet-v2.0.2/css/ratchet.css" rel="stylesheet">
 
-
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.structure.min.css" rel="stylesheet">
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
-
 		<link href="css/accordion.css" rel="stylesheet">
+		<link href="libs/SnapJs/snap.css" rel="stylesheet">
 		<link href="css/followers.css" rel="stylesheet">
+
+
     	<!-- Include the compiled Ratchet JS -->
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
 		<script src="libs/jquery-1.12.0.min.js"></script>
+		<script src="libs/SnapJs/snap.min.js"></script>
+
 		<script>
 	    	$(document).bind('mobileinit',function(){
 	        $.mobile.changePage.defaults.changeHash = false;
@@ -37,46 +40,74 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" href="profile_visitato.html"></a>
-  			<h1 class="title">Voglio ricevere notifiche quando è</h1>
+			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
+  			<h1 id= "titleNavigation" class="titleNavigation">Followers</h1>
 		</header>
-
-		<div class="content">
-			<div class="card">
-				<ul class="table-view nomarginbottom">
-					<li class="table-view-cell table-view-divider">Status</li>
-					<li class="table-view-cell">a lezione<div class="toggle"><div class="toggle-handle"></div></div></li>
-					<li class="table-view-cell">in pausa<div class="toggle"><div class="toggle-handle"></div></div></li>
-					<li class="table-view-cell">a pranzo<div class="toggle"><div class="toggle-handle"></div></div></li>
-					<li class="table-view-cell">non disturbare<div class="toggle"><div class="toggle-handle"></div></div></li>
-					<li class="table-view-cell">annoiato/a sui libri<div class="toggle"><div class="toggle-handle"></div></div></li>
-				</ul>
-			</div>
-			<div class="card">
-				<ul class="table-view">
-					<li class="table-view-cell table-view-divider">
-					    Attiva Notifiche
-					</li>
-
-					<li class="table-view-cell">
-					    Nel mio edificio
-					    <div class="toggle">
-					    	<div class="toggle-handle"></div>
-					    </div>
-					</li>
-
-					<li class="table-view-cell">
-						<a class="navigate-right"  href="selectPole.html" data-transition="slide">
-							<span class="media-object pull-left icon icon-pages"></span>
-							<div class="media-body">
-							Altri poli
-							</div>
-						</a>
-					</li>
-				</ul>
+		<div class="snap-drawers">
+			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
 			</div>
 		</div>
+		<div id="contentmain" class="content snap-content">
 
+
+			<!-- Lista follower -->
+			<div class="card">
+	  			<ul class="table-view">
+	    			<li class="table-view-cell table-view-divider">Amici</li>
+
+
+	  				<li class="table-view-cell media">
+	    				<a class="navigate-right frecciaProfilo">
+		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
+			      			<div class="media-body">Matteo Polsinelli</div>
+							<div>
+				        		<span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+			      			</div>
+	    				</a>
+	  				</li>
+
+			  		<li class="table-view-cell media">
+			    		<a class="navigate-right">
+				      		<img class="media-object pull-left cardImage" src="img/davide.jpg">
+							<div class="media-body">Davide Giancola</div>
+							<div>
+						        <span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+					      	</div>
+			    		</a>
+			  		</li>
+	  			</ul>
+			</div>
+
+			<div class="card">
+	  			<ul class="table-view">
+	    			<li class="table-view-cell table-view-divider">Professori</li>
+
+	    			<li class="table-view-cell media">
+			    		<a class="navigate-right">
+				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
+							<div class="media-body">Costanzo Manes</div>
+							<div>
+						        <span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+					      	</div>
+			    		</a>
+			  		</li>
+	    			<li class="table-view-cell media">
+			    		<a class="navigate-right">
+				      		<img class="media-object pull-left cardImage" src="img/pepe.jpg">
+							<div class="media-body">Pierdomenico Pepe</div>
+							<div>
+						        <span class="labelCard">Status: </span>
+								<span class="textCard">A lezione</span>
+					      	</div>
+			    		</a>
+			  		</li>
+	  			</ul>
+			</div>
+
+			
 		<!-- Tab Bar -->
 		<nav class="bar bar-tab">
   			<a class="tab-item" href="#">
@@ -103,5 +134,4 @@
 			</a>
 		</nav>
   	</body>
-
 </html>
