--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -36,8 +36,32 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h1 class="title">Menu</h1>
+  			<h1 class="title">Notifiche</h1>
 		</header>
+
+		<div class="content">
+			<div class="card">
+				<ul class="table-view">
+					<li class="table-view-cell table-view-divider">
+					    Poli
+					</li>
+
+					<li class="table-view-cell">
+					    Coppito
+					    <div class="toggle">
+					    	<div class="toggle-handle"></div>
+					    </div>
+					</li>
+
+					<li class="table-view-cell">
+					    Roio
+					    <div class="toggle active">
+					      	<div class="toggle-handle"></div>
+					    </div>
+					</li>
+				</ul>
+			</div>
+		</div>
 
 		<nav class="bar bar-tab">
   			<a class="tab-item active" href="#">
