--- a/notifiche_follower.html
+++ b/notifiche_follower.html
@@ -66,7 +66,7 @@
 					</li>
 
 					<li class="table-view-cell">
-						<a class="navigate-right"  href="selectPole.html" data-transition="slide">
+						<a class="navigate-right"  href="notifiche_follower_amici_poli.html" data-transition="slide">
 							<span class="media-object pull-left icon icon-pages"></span>
 							<div class="media-body">
 							Altri poli
