--- a/profile_visitato.html
+++ b/profile_visitato.html
@@ -37,6 +37,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" href="listaFollowers.html"></a>
   			<h1 class="title">Matteo Polsinelli</h1>
 		</header>
 
@@ -45,7 +46,7 @@
 			<ul class="table-view">
 				<li class="card pulito">
 					<img class="imageProfile profilo-image" src="img/matteo.jpg">
-					  <span class="media-object pull-left  "><img class="email-icon" src="./img/email-icon.png"></span>
+					  <span class="media-object pull-left  "><img id="emailemail" class="email-icon" src="./img/email-icon.png"></span>
 						      <div class="media-body email-text">
 						        E-mail:  matteo.polsinelli@student.univaq.it
 						      </div>
@@ -102,7 +103,7 @@
 								</div>
 							</li>
 							<li class="table-view-cell pulito">
-							<a class="navigate-right"  href="notifiche_follower" data-transition="slide">
+							<a class="navigate-right"  href="notifiche_follower.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Scegli notifiche
@@ -139,7 +140,7 @@
 			    <span class="tab-label">Menu</span>
 			</a>
 		</nav>
-
+		<link href="css/profile.css" rel="stylesheet">
   	</body>
 
 
