--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -36,31 +36,30 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h1 class="title">Notifiche</h1>
+  			<h1 class="title">Menu</h1>
 		</header>
 
 		<div class="content">
-			<div class="card">
-				<ul class="table-view">
-					<li class="table-view-cell table-view-divider">
-					    Poli
-					</li>
 
-					<li class="table-view-cell">
-					    Coppito
-					    <div class="toggle">
-					    	<div class="toggle-handle"></div>
-					    </div>
-					</li>
+			<button class="btn btn-primary btn-block">
+				<span class="icon icon-gear"></span>
+ 				ButtonGestione Poli
+			</button>
 
-					<li class="table-view-cell">
-					    Roio
-					    <div class="toggle active">
-					      	<div class="toggle-handle"></div>
-					    </div>
-					</li>
-				</ul>
-			</div>
+			<button class="btn btn-positive btn-block">
+				<span class="icon icon-list"></span>
+				Cronologia Notifiche
+			</button>
+
+			<button class="btn btn-negative btn-block">
+				<span class="icon icon-search"></span>
+				Avvista Prof
+			</button>
+
+			<button class="btn btn-negative btn-block">
+				<span class="icon icon-search"></span>
+				Log Out
+			</button>
 		</div>
 
 		<nav class="bar bar-tab">
