--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -19,7 +19,6 @@
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 
 		<link href="css/accordion.css" rel="stylesheet">
-		<link href="css/profile.css" rel="stylesheet">
     	<!-- Include the compiled Ratchet JS -->
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
 		<script src="libs/jquery-1.12.0.min.js"></script>
@@ -41,7 +40,7 @@
 
 		<div class="content">
 
-			<button class="btn btn-primary btn-block">
+			<button class="btn btn-primary btn-block prova">
 				<span class="icon icon-gear"></span>
  				ButtonGestione Poli
 			</button>
@@ -52,8 +51,10 @@
 			</button>
 
 			<button class="btn btn-negative btn-block">
-				<span class="icon icon-search"></span>
-				Avvista Prof
+				<a href="selezionaProfAvvistamento.html">
+					<span class="icon icon-search"></span>
+					Avvista Prof
+				</a>
 			</button>
 
 			<button class="btn btn-negative btn-block">
