--- a/selezionaProfAvvistamento.html
+++ b/selezionaProfAvvistamento.html
@@ -34,19 +34,15 @@
 	    	});
 		</script>
 		<script src="libs/jquery.mobile.custom/jquery.mobile.custom.min.js"></script>
-
   	</head>
   	<body>
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-  			<h2 id= "titleNavigation" class="titleNavigation">Seleziona Professori</h2>
+			<a class="icon icon-left-nav pull-left" href="menuNavBar.html"></a>
+  			<h2 class="titleNavigation">Seleziona Professori</h2>
 		</header>
-		<div class="snap-drawers">
-			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
-			</div>
-		</div>
+
 		<div id="contentmain" class="content snap-content">
 			<div class="card">
 	  			<ul class="table-view">
