--- a/profile_prof_visitato.html
+++ b/profile_prof_visitato.html
@@ -138,5 +138,7 @@
 				    <span class="tab-label">Menu</span>
 				</a>
 			</nav>
+			<link href="css/accordion.css" rel="stylesheet">
+			<link href="css/profile.css" rel="stylesheet">
   	</body>
 </html>
