LINK ROUTE FIXED

--- a/navigation.html
+++ b/navigation.html
@@ -125,7 +125,7 @@
     			<span class="icon icon-home"></span>
     			<span class="tab-label">Home</span>
   			</a>
-			<a class="tab-item" href="#">
+			<a class="tab-item" href="profile.html">
 				<span class="icon icon-person"></span>
 			    <span class="tab-label">Profilo</span>
 			</a>
@@ -139,7 +139,7 @@
 				</span>
 			    <span class="tab-label">Followers</span>
 			</a>
-			<a class="tab-item" href="#">
+			<a class="tab-item" href="menuNavBar.html">
 				<span class="icon icon-bars"></span>
 			    <span class="tab-label">Menu</span>
 			</a>
