--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -50,12 +50,13 @@
 				Cronologia Notifiche
 			</button>
 
-			<button class="btn btn-negative btn-block">
-				<a href="selezionaProfAvvistamento.html">
+
+			<a href="selezionaProfAvvistamento.html">
+				<button class="btn btn-negative btn-block">
 					<span class="icon icon-search"></span>
 					Avvista Prof
-				</a>
-			</button>
+				</button>
+			</a>
 
 			<button class="btn btn-negative btn-block">
 				<span class="icon icon-search"></span>
@@ -64,7 +65,7 @@
 		</div>
 
 		<nav class="bar bar-tab">
-  			<a class="tab-item active" href="#">
+  			<a class="tab-item" href="navigation.html">
     			<span class="icon icon-home"></span>
     			<span class="tab-label">Home</span>
   			</a>
@@ -82,7 +83,7 @@
 				</span>
 			    <span class="tab-label">Followers</span>
 			</a>
-			<a class="tab-item" href="#">
+			<a class="tab-item active" href="#">
 				<span class="icon icon-bars"></span>
 			    <span class="tab-label">Menu</span>
 			</a>
