--- a/selezionaProfAvvistamento.html
+++ b/selezionaProfAvvistamento.html
@@ -49,7 +49,7 @@
 	    			<li class="table-view-cell table-view-divider">Professori</li>
 
 	    			<li class="table-view-cell media">
-			    		<a class="navigate-right">
+			    		<a class="navigate-right" href="selezionaProfPosizione.html">
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 							<div class="media-body">Costanzo Manes</div>
 							<div>
@@ -96,5 +96,7 @@
 			    <span class="tab-label">Menu</span>
 			</a>
 		</nav>
+
   	</body>
+
 </html>
