--- a/selezionaProfPosizione.html
+++ b/selezionaProfPosizione.html
@@ -23,7 +23,6 @@
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
 		<script src="libs/jquery-1.12.0.min.js"></script>
 		<script src="libs/SnapJs/snap.min.js"></script>
-		<script src="js/profWatch.js"></script>
 
 
 		<script>
@@ -44,7 +43,7 @@
   			<h2 class="titleNavigation">Seleziona Posizione</h2>
 		</header>
 
-		<div class="content">
+		<div class="content" data-page="index">
 			<div class="card">
 				<ul class="table-view">
 				 	<li class="table-view-cell">
@@ -128,4 +127,6 @@
 			</a>
 		</nav>
   	</body>
+	<script src="js/profWatch.js"></script>
+
 </html>
