--- a/schedaPolo.html
+++ b/schedaPolo.html
@@ -43,7 +43,78 @@
 			<img class="imagePhoto" src="img/poloCoppito.jpg">
 		</div>
 
-  	</body>
-	<script src="js/navigation.js"></script>
+		<ul class="table-view">
+			<li class="card pulito">
+				<img class="imageProfile profilo-image" src="img/manes.jpg">
 
+				<span class="media-object pull-left  "><img class="email-icon" src="./img/email-icon.png"></span>
+				<div class="media-body email-text">
+					E-mail:  costanto.manes@univaq.it
+				</div>
+
+				<div class="media-body email-text">
+					Ricevimento: Coppito Blocco 1 terzo piano
+				</div>
+
+				<div class="media-body email-text">
+					Orario Ricevimento: Lunedi 10:00-12:00
+				</div>
+
+				<div class="media-body email-text">
+					Polo di riferimento: Coppito
+				</div>
+			</li>
+		</ul>
+		<ul class="table-view">
+			  <li>
+					<ul class="table-view pulito ">
+						<li class="table-view-cell pulito">
+							<a>
+							  <span class="media-object pull-left icon icon-gear"></span>
+							  <div class="media-body">
+								Stato Corrente: accessibile
+							  </div>
+							 </a>
+						</li>
+
+						<li class="table-view-cell pulito">
+							<a class="navigate-right"  href="selectPole.html" data-transition="slide">
+								<span class="media-object pull-left icon icon-pages"></span>
+								<div class="media-body">
+								Edifici
+								</div>
+							</a>
+						</li>
+
+						<li class="table-view-cell pulito">
+							<a class="navigate-right"  href="#" data-transition="slide">
+								<span class="media-object pull-left icon icon-pages"></span>
+								<div class="media-body">
+								Mensa: aperta (vedi menu)
+								</div>
+							</a>
+						</li>
+
+						<li class="table-view-cell pulito">
+							<a>
+							   <span class="media-object pull-left icon icon-pages"></span>
+								Ricevi Notifiche
+								<div class="toggle">
+									<div class="toggle-handle"></div>
+								</div>
+							</a>
+						</li>
+
+						<li class="table-view-cell pulito">
+							<a class="navigate-right" href="gestisci_notifiche_struttura.html" data-transition="slide-in">
+							   <span class="media-object pull-left icon icon-pages"></span>
+							   <div class="media-body">
+								Scegli Notifiche
+							   </div>
+							</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+  	</body>
 </html>
