add route navigation

--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -47,10 +47,12 @@
 				</button>
 			</a>
 
-			<button class="btn btn-positive btn-block">
-				<span class="icon icon-list"></span>
-				Cronologia Notifiche
-			</button>
+			<a href="gestione_notifiche.html">
+				<button class="btn btn-positive btn-block">
+					<span class="icon icon-list"></span>
+					Cronologia Notifiche
+				</button>
+			</a>
 
 
 			<a href="selezionaProfAvvistamento.html">
