css fix gestione_notifiche.html

--- a/cronologia_notifiche_followers.html
+++ b/cronologia_notifiche_followers.html
@@ -65,8 +65,8 @@
     							  </div>
    								   <div class="ui-block-c ui-block-c-button">
    								   		<span class="center btncontainer">
-										<button class="btn">Accetta</button>
-										<button class="btn">Rifiuta</button>
+										<button class="btn btn_accetta">Accetta</button>
+										<button class="btn btn_rifiuta">Rifiuta</button>
 										</span>
 			      				  </div>
   					     </div>
@@ -193,5 +193,6 @@
 		</nav>
 		<script src="libs/SlipJs/slip.js"></script>
 <script src="js/gestione_notifiche.js"></script>
+<link href="css/gestione_notifiche.css" rel="stylesheet">
   	</body>
 </html>
