--- a/gestione_notifiche.html
+++ b/gestione_notifiche.html
@@ -66,7 +66,7 @@
 			  </li>
 			  <li class="table-view-cell">
 
-   		 			 <a class="navigate-right">
+   		 			 <a class="navigate-right" href="cronologia_notifiche_followers.html">
    		 			 	<span class="badge">6</span>
     				  PROFESSORI
   					  </a>
