--- a/lista_poli_per_gestione.html
+++ b/lista_poli_per_gestione.html
@@ -44,33 +44,35 @@
 		</header>
 
 		<div class="content">
-			<ul class="table-view">
-				<li class="table-view-cell">
-					<a class="navigate-right" href="schedaPolo.html">
-				    	Coppito
-				    </a>
-				</li>
-				<li class="table-view-cell">
-					<a class="navigate-right">
-				    	Medicina
-				    </a>
-				</li>
-				<li class="table-view-cell">
-					<a class="navigate-right">
-				    	Lettere
-				    </a>
-				</li>
-				<li class="table-view-cell">
-					<a class="navigate-right">
-				    	Roio
-				    </a>
-				</li>
-				<li class="table-view-cell">
-					<a class="navigate-right">
-				    	Accademia
-				    </a>
-				</li>
-			</ul>
+			<div class="card">
+	  			<ul class="table-view">
+					<li class="table-view-cell">
+						<a class="navigate-right" href="schedaPolo.html">
+					    	Coppito
+					    </a>
+					</li>
+					<li class="table-view-cell">
+						<a class="navigate-right">
+					    	Medicina
+					    </a>
+					</li>
+					<li class="table-view-cell">
+						<a class="navigate-right">
+					    	Lettere
+					    </a>
+					</li>
+					<li class="table-view-cell">
+						<a class="navigate-right">
+					    	Roio
+					    </a>
+					</li>
+					<li class="table-view-cell">
+						<a class="navigate-right">
+					    	Accademia
+					    </a>
+					</li>
+	  			</ul>
+			</div>
 		</div>
 		<!-- Tab Bar -->
 		<nav class="bar bar-tab">
