--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 
 		<link href="css/accordion.css" rel="stylesheet">
-	
+
     	<!-- Include the compiled Ratchet JS -->
     	<script src="libs/ratchet-v2.0.2/js/ratchet.js"></script>
 		<script src="libs/jquery-1.12.0.min.js"></script>
@@ -112,6 +112,20 @@
 
 								</li>
 						</ul>
+
+
+								<ul class="table-view pulito ">
+								  <li class="table-view-cell pulito">
+
+									<a class="navigate-right"  href="gestisciPrivacy.html" data-transition="slide">
+								    	<span class="media-object pull-left icon icon-pages"></span>
+								      	<div class="media-body">
+								        Privacy
+								      	</div>
+								    </a>
+								 </li>
+
+								</ul>
 
 					</li>
 				</ul>
