--- a/profile_visitato_from_navigation.html
+++ b/profile_visitato_from_navigation.html
@@ -3,14 +3,18 @@
 
   	<div class="content">
 
-		<div class="content spazio-nav">
+        <header class="bar bar-nav">
+            <a class="icon icon-left-nav pull-left" href="listaFollowers.html"></a>
+            <h1 class="title">Matteo Polsinelli</h1>
+        </header>
+        
 			<ul class="table-view">
 				<li class="card pulito">
-					<img class="imageProfile profilo-image" src="img/matteo.jpg">
-					  <span class="media-object pull-left  "><img id="emailemail" class="email-icon" src="./img/email-icon.png"></span>
-						      <div class="media-body email-text">
-						        E-mail:  matteo.polsinelli@student.univaq.it
-						      </div>
+                    <img class="imageProfile profilo-image" src="img/matteo.jpg">
+                      <span class="media-object pull-left  "><img class="email-icon" src="./img/email-icon.png"></span>
+                              <div class="media-body email-text">
+                                E-mail:  matteo.polsinelli@student.univaq.it
+                              </div>
 				</li>
 
 			</ul>
@@ -55,14 +59,14 @@
 						 	<li class="table-view-cell pulito">
 								<span class="media-object pull-left icon icon-pages"></span>
 					     		<div class="media-body">
-					       			Ricevi Notifiche
+					       			Ricevi Notifiche Intelligenti
 					      		</div>
 								<div class="toggle">
 									<div class="toggle-handle"></div>
 								</div>
 							</li>
 							<li class="table-view-cell pulito">
-							<a class="navigate-right"  href="notifiche_follower.html" data-transition="slide">
+							<a class="navigate-right"  href="notifiche_follower_navigation.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Scegli notifiche
@@ -72,7 +76,7 @@
 						</ul>
 					</li>
 				</ul>
-			</div>
+		</div>
 
 		<!-- Tab Bar -->
 		<nav class="bar bar-tab">
@@ -99,5 +103,4 @@
 			    <span class="tab-label">Menu</span>
 			</a>
 		</nav>
-  	</div>
 </html>
