--- a/selectPole.html
+++ b/selectPole.html
@@ -39,16 +39,17 @@
   			<a class="icon icon-left-nav pull-left" href="profile.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Seleziona Polo</h1>
 		</header>
-		
+
 		<div class="content">
-			<ul class="table-view">
-				<li class="table-view-cell">Coppito</li>
-				<li class="table-view-cell">Medicina</li>
-				<li class="table-view-cell">Lettere</li>
-				<li class="table-view-cell">Roio</li>
-				<li class="table-view-cell">Accademia</li>
-			</ul>
+			<div class="card">
+	  			<ul class="table-view">
+					<li class="table-view-cell">Coppito</li>
+					<li class="table-view-cell">Medicina</li>
+					<li class="table-view-cell">Lettere</li>
+					<li class="table-view-cell">Roio</li>
+					<li class="table-view-cell">Accademia</li>
+	  			</ul>
+			</div>
 		</div>
   	</body>
-
 </html>
