--- a/navigation.html
+++ b/navigation.html
@@ -19,6 +19,7 @@
 
 		<link href="libs/SnapJs/snap.css" rel="stylesheet">
 		<link href="css/accordion.css" rel="stylesheet">
+		<link href="css/profile.css" rel="stylesheet">
 
 
 
@@ -42,7 +43,7 @@
 		<!-- Title bar -->
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-  			<h1 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h1>
+  			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
 		</header>
 		<div class="snap-drawers">
 			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
