--- a/navigation.html
+++ b/navigation.html
@@ -82,8 +82,8 @@
 
 			    	</div>
 
-					<div data-role="collapsible">
-			        	<h3>Coppito 1</h3>
+					<div  data-role="collapsible">
+			        	<h3 id="coppito1">Coppito 1</h3>
 
 						<div data-role="collapsible">
 				        	<h3>Piano 0</h3>
